@@ -1,0 +1,4 @@
+package data.templateComponent
+
+class TemplateComponentRepository() {
+}
