@@ -1,0 +1,4 @@
+package data.templateComponent
+data class TemplateComponentUIState(
+    val isLoading: Boolean = true
+)
